--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ frontend/package-lock.json
 logs/
 *.log
 frontend/node_modules
-frontend/src/main.js
+frontend/src/*.example.js
+frontend/src/*.js
 frontend/src/config.ts
-frontend/src/config.js
+
 
